--- a/blackjack.css
+++ b/blackjack.css
@@ -1,8 +1,8 @@
 #myCanvas {
     border: 20px solid black;
     display:flex;
-    justify-content: center; /* to center the content horizontally */
-    align-items: center; /* to center the content vertically */
+    justify-content: center; 
+    align-items: center; 
     background-color: rgba(0, 128, 0, 0.927);
     min-height: 100vh; 
     box-sizing: border-box;
