--- a/blackjack.css
+++ b/blackjack.css
@@ -1,21 +1,26 @@
-#myCanvas {
-    border: 20px solid black;
-    display:flex;
-    justify-content: center; 
-    align-items: center; 
-    background-color: rgba(0, 128, 0, 0.927);
-    min-height: 100vh; 
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-  
+body {
+    font-family: 'Times New Roman', Times, serif;
+}
+#dealer-cards img{
+    height: 160px;
+    width: 130px;
+    margin: 1px;
 }
 
-body {
-    width: 100%;
-    height: 100%
+#player-cards img{
+    height: 160px;
+    width: 130px;
+    margin: 1px;
+}
+
+#hit{
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+}
+
+#stand{
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
 }
