--- a/blackjack.css
+++ b/blackjack.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Times New Roman', Times, serif;
+    background-color: green;
+    text-align: center;
 }
 #dealer-cards img{
     height: 160px;
